infra/modules/networking/main.tf
resource "azurerm_virtual_network" "this" {
  name                = "vnet-${var.prefix}"
  address_space       = var.vnet_address_space
  location            = var.location
  resource_group_name = var.resource_group_name
  tags                = var.tags
}

resource "azurerm_subnet" "vmss" {
  name                 = "snet-vmss-${var.prefix}"
  resource_group_name  = var.resource_group_name
  virtual_network_name = azurerm_virtual_network.this.name
  address_prefixes     = var.vmss_subnet_prefix
}
